[tool.poetry]
name = "chalice-spec"
version = "0.1.1"
description = "Chalice x APISpec x Pydantic plug-ins"
authors = ["Jake Wood <jake@testbox.com>"]
repository = "https://github.com/TestBoxLab/chalice-spec"
license = "MIT"
keywords = ["Chalice", "AWS", "APIspec", "OpenAPI", "Pydantic"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
apispec = "^5.2.2"

[tool.poetry.dev-dependencies]
pydantic = "^1.9.1"
pytest = "^7.1.2"
chalice = "^1.27.1"
black = "^22.6.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
